--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/LeoOliva/node-api-rest-core#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "html-to-text": "^4.0.0",
     "mjml-utils": "^2.2.1",
     "nodemailer": "^4.6.3"
